--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/mbrostami/ComfyUI-HF"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "mbrostami"
 DisplayName = "ComfyUI-HF"
 Icon = ""
